2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	Fixes from Openwall patch shadow-4.0.4.1-owl-chage-drop-priv.diff:
	* src/chage.c: Remove cleanup(). pw_lock is never called. Replace
	cleanup(2) by spw_unlock and remove the calls to cleanup(1).
	* src/chage.c: Remove variable pwrw. It is always set to 0. The
	password database is always read only.
	* src/chage.c: Make chage -l also drop the saved GID.
	* src/chage.c: Prefer setregid/setreuid to setgid/setuid.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	Fixes from Openwall patch shadow-4.0.4.1-alt-man.diff:
	* man/useradd.8.xml: Indicate that the NIS caveats is also valid
	for any external database as LDAP.
	* man/groupadd.8.xml: Likewise.
	* man/groupadd.8.xml: Reorder and reformat the caveats bullets.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: Applied Debian patch 409_man_generate_from_PO to
	automatically generate the translated manpages from the POs.
	* man/Makefile.am: Replace the individual rules for the generation
	of the manpages (from XML) by a generic Makefile rule an
	dependencies for the linked manpages.
	* man/generate_translations.mak: Generic rules for all the
	generated translated manpages (if ENABLE_REGENERATE_MAN).
	* man/Makefile.am: Removed rules for all the generated translated
	manpages.
	* man/sv/Makefile.am, man/de/Makefile.am, man/fr/Makefile.am,
	man/pl/Makefile.am, man/ru/Makefile.am, man/it/Makefile.am:
	Include generate_translations.mak to handle the generated
	translations (XML and roff files).
	* man/Makefile.am: Translated XML files moved from the CLEANFILES
	variable of man/Makefile.am to the various languages Makefiles.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chpasswd.8.xml: Document that chpasswd does not use PAM to
	update the passwords. This fixes http://bugs.debian.org/396726.
	Debian patch 411_chpasswd_document_no_pam.
